--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-hola
+<head>
+	<title>Listas</title>
+	<!-- Incluimos los archivos de estilos y liberías jQuery -->
+	<link rel="stylesheet" href="jquery.mobile/jquery.mobile-1.1.0.min.css" />
+	<script src="jquery.mobile/jquery-1.7.2.min"></script>
+	<script src="jquery.mobile/jquery.mobile-1.1.0.min.js"></script>
+	</head>
+	<body>
+		<label for="lista-opciones" class="select">Elige una opción</label>
+		<select name="lista" id="lista-opciones">
+		   <option value="1">Opción 1</option>
+		   <option value="2">Opción 2</option>
+		   <option value="3">Opción 3</option>
+		   <option value="4">Opción 4</option>
+		</select>
+	</body>
