--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 	<title>Listas</title>
 	<!-- Incluimos los archivos de estilos y liberías jQuery -->
 	<link rel="stylesheet" href="jquery.mobile/jquery.mobile-1.1.0.min.css" />
-	<script src="jquery.mobile/jquery-1.7.2.min"></script>
-	<script src="jquery.mobile/jquery.mobile-1.1.0.min.js"></script>
+	<script src="jquery-1.7.2.min"></script>
+	<script src="jquery.mobile-1.1.0.min.js"></script>
 	</head>
 	<body>
 		<label for="lista-opciones" class="select">Elige una opción</label>
