--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 	<title>Listas</title>
 	<!-- Incluimos los archivos de estilos y liberías jQuery -->
@@ -6,7 +8,7 @@
 	<script src="jquery.mobile-1.1.0.min.js"></script>
 	</head>
 	<body>
-		<label for="lista-opciones" class="select">Elige una opción</label>
+		<label for="lista-opciones" class="select" style="width:50px; height:50px;">Elige una opción</label>
 		<select name="lista" id="lista-opciones">
 		   <option value="1">Opción 1</option>
 		   <option value="2">Opción 2</option>
@@ -14,3 +16,4 @@
 		   <option value="4">Opción 4</option>
 		</select>
 	</body>
+</html>
