--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
 	<link rel="stylesheet" href="jquery.mobile/jquery.mobile-1.1.0.min.css" />
 	<script src="jquery-1.7.2.min"></script>
 	<script src="jquery.mobile-1.1.0.min.js"></script>
+	document.addEventListener("deviceready", onDeviceReady, false); 
+<script type="text/javascript" charset="utf-8"> 
+ function onDeviceReady() { 
+ 
+ alert("sipositivo listo");
+ }  
+</script>
 	</head>
 	<body>
 		<label for="lista-opciones" class="select" style="width:50px; height:50px;">Elige una opción</label>
