--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 	<link rel="stylesheet" href="jquery.mobile/jquery.mobile-1.1.0.min.css" />
 	<script src="jquery-1.7.2.min"></script>
 	<script src="jquery.mobile-1.1.0.min.js"></script>
-	document.addEventListener("deviceready", onDeviceReady, false); 
-<script type="text/javascript" charset="utf-8"> 
- function onDeviceReady() { 
- 
- alert("sipositivo listo");
- }  
+	<script type=”text/javascript” charset=”utf-8” src=”phonegap.js”></script>
+<script type=”text/javascript” charset=”utf-8”>
+
+document.addEventListener(“deviceready”, onDeviceReady, false);
+
+function onDeviceReady() { alert("Dispositivo Listo"); }
 </script>
 	</head>
 	<body>
