--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+
+<html>
+
 <head>
-	<title>Listas</title>
+
+<title>PhoneGap Button Example</title>
 	<!-- Incluimos los archivos de estilos y liberías jQuery -->
-	<link rel="stylesheet" href="jquery.mobile/jquery.mobile-1.1.0.min.css" />
-	<script src="jquery-1.7.2.min"></script>
-	<script src="jquery.mobile-1.1.0.min.js"></script>
+
 <script type=”text/javascript” charset=”utf-8” src=”phonegap.js”></script> 
 <script type=”text/javascript” charset=”utf-8”> 
 document.addEventListener(“deviceready”, onDeviceReady, false);
