--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 	<!-- Incluimos los archivos de estilos y liberías jQuery -->
 
 <script type="text/javascript" charset="utf-8" src="phonegap.js"></script> 
+<script scr="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+<script scr="http://code.jquery.com/mobile/1.3.1/jquery-1.3.1.min.js"></script>
 <script type="text/javascript" charset="utf-8"> 
 document.addEventListener("deviceready", onDeviceReady, false);
 
