--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@ function onSearchButton() { alert("You hit the search button!"); }
 </script>
 	</head>
 	<body>
+	ddd
 		<div data-role="page"  id="page">
         <div data-role="header"  id="page">
         <ul>
