--- a/index.html
+++ b/index.html
@@ -30,14 +30,15 @@ function onSearchButton() { alert("You hit the search button!"); }
 	</head>
 	<body>
 	ddd
+	 <div data-role="content"></div>
+         </div>
 		<div data-role="page"  id="page">
-        <div data-role="header"  id="page">
+        <div data-role="navbar"  id="page">
         <ul>
         <li><a href="#page">Inicio</a></li>
         <li><a href="#page2">Usuarios</a></li>
         </ul>
         </div>
-         <div data-role="content"></div>
-         </div>
+        
 	</body>
 </html>
