--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ function onSearchButton() { alert("You hit the search button!"); }
 	 <div data-role="content"></div>
          </div>
 		<div data-role="page"  id="page">
-        <div data-role="navbar"  id="page">
+        <div data-role="navbar"  id="page" style="background-color:#03F">
         <ul>
         <li><a href="#page">Inicio</a></li>
         <li><a href="#page2">Usuarios</a></li>
