--- a/index.html
+++ b/index.html
@@ -31,7 +31,19 @@ function onSearchButton() { alert("You hit the search button!"); }
 	</head>
 	<body>
 	ddd
-	 <div data-role="content"></div>
+	 <div data-role="content">
+	 	<form method="post" action="demoform.asp">
+  <fieldset class="ui-field-contain">
+    <label for="day">Select Day</label>
+    <select name="day" id="day">
+      <option value="mon">Monday</option>
+      <option value="tue">Tuesday</option>
+      <option value="wed">Wednesday</option>
+    </select>
+  </fieldset>
+</form>
+	 	
+	 </div>
          </div>
 		<div data-role="page"  id="page">
         <div data-role="navbar"  id="page" style="background-color:#03F">
